# meus-snippets-antigravity

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.marscode/: deviceInfo.json
scripts/: tauri.mjs
snippets-textexpander/: Atendimento-Inicial.csv  Dvidas.csv  Entrega-.csv  Extra.csv  Pagamento-Pendente-.csv  Pedido-em-andamento-.csv  Pr-Venda.csv  Ps-Venda.csv
src/: index.html  manager-main.tsx  picker-main.ts  picker.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  macro_engine.rs  main.rs  snippet_store.rs  text_expander.rs  tray.rs
src/components/ui/: accordion.tsx  dialog.tsx  dropdown-menu.tsx
src/lib/: types.ts
src/react/: manager-app.tsx
src/scripts/: macro-editor.js  manager.js  picker.js
src/styles/: globals.css  main.css  picker.css
