[package]
name = "guepardosys-snip"
version = "0.1.1"
description = "Cross-platform snippet/macro expander"
authors = ["guepardosys"]
edition = "2021"

[lib]
name = "guepardosys_snip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
enigo = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tauri-plugin-single-instance = "2.4.2"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
gtk = "0.18"
